--- a/crates/diesel_models/Cargo.toml
+++ b/crates/diesel_models/Cargo.toml
@@ -10,6 +10,9 @@ license.workspace = true
 [features]
 default = ["kv_store"]
 kv_store = []
+v1 =[]
+v2 = []
+routing_v2 = []
 
 [dependencies]
 async-bb8-diesel = { git = "https://github.com/jarnura/async-bb8-diesel", rev = "53b4ab901aab7635c8215fd1c2d542c8db443094" }
@@ -22,6 +25,7 @@ serde_json = "1.0.115"
 strum = { version = "0.26.2", features = ["derive"] }
 thiserror = "1.0.58"
 time = { version = "0.3.35", features = ["serde", "serde-well-known", "std"] }
+
 
 # First party crates
 common_enums = { version = "0.1.0", path = "../common_enums" }
