--- a/crates/hyperswitch_domain_models/Cargo.toml
+++ b/crates/hyperswitch_domain_models/Cargo.toml
@@ -12,6 +12,7 @@ default = ["olap", "payouts", "frm"]
 olap = []
 payouts = ["api_models/payouts"]
 frm = ["api_models/frm"]
+v2 = ["api_models/v2","diesel_models/v2"]
 
 [dependencies]
 # First party deps
