--- a/crates/api_models/Cargo.toml
+++ b/crates/api_models/Cargo.toml
@@ -12,13 +12,13 @@ default = ["v1"]
 errors = ["dep:actix-web", "dep:reqwest"]
 dummy_connector = ["euclid/dummy_connector", "common_enums/dummy_connector"]
 detailed_errors = []
-payouts = []
+payouts = ["common_enums/payouts"]
 frm = []
 olap = []
 openapi = ["common_enums/openapi", "olap", "recon", "dummy_connector", "olap"]
 recon = []
-v1 = []
 v2 = []
+v1 = []
 merchant_connector_account_v2 = []
 merchant_account_v2 = []
 payment_v2 = []
