--- a/crates/external_services/Cargo.toml
+++ b/crates/external_services/Cargo.toml
@@ -35,6 +35,6 @@ vaultrs = { version = "0.7.2", optional = true }
 
 # First party crates
 common_utils = { version = "0.1.0", path = "../common_utils" }
-hyperswitch_interfaces = { version = "0.1.0", path = "../hyperswitch_interfaces" }
+hyperswitch_interfaces = { version = "0.1.0", path = "../hyperswitch_interfaces", default-features = false }
 masking = { version = "0.1.0", path = "../masking" }
 router_env = { version = "0.1.0", path = "../router_env", features = ["log_extra_implicit_fields", "log_custom_entries_to_extra"] }
