--- a/crates/router/Cargo.toml
+++ b/crates/router/Cargo.toml
@@ -16,7 +16,7 @@ keymanager_mtls = ["reqwest/rustls-tls", "common_utils/keymanager_mtls"]
 encryption_service = ["hyperswitch_domain_models/encryption_service", "common_utils/encryption_service"]
 email = ["external_services/email", "scheduler/email", "olap"]
 keymanager_create = []
-frm = ["api_models/frm", "hyperswitch_domain_models/frm"]
+frm = ["api_models/frm", "hyperswitch_domain_models/frm", "hyperswitch_connectors/frm"]
 stripe = ["dep:serde_qs"]
 release = ["stripe", "email", "accounts_cache", "kv_store", "vergen", "recon", "external_services/aws_kms", "external_services/aws_s3", "keymanager_mtls", "keymanager_create", "encryption_service"]
 oltp = ["storage_impl/oltp"]
@@ -26,7 +26,7 @@ vergen = ["router_env/vergen"]
 dummy_connector = ["api_models/dummy_connector", "euclid/dummy_connector", "kgraph_utils/dummy_connector"]
 external_access_dc = ["dummy_connector"]
 detailed_errors = ["api_models/detailed_errors", "error-stack/serde"]
-payouts = ["api_models/payouts", "common_enums/payouts", "hyperswitch_domain_models/payouts", "storage_impl/payouts"]
+payouts = ["api_models/payouts", "common_enums/payouts", "hyperswitch_connectors/payouts", "hyperswitch_domain_models/payouts", "storage_impl/payouts"]
 payout_retry = ["payouts"]
 recon = ["email", "api_models/recon"]
 retry = []
@@ -125,10 +125,10 @@ diesel_models = { version = "0.1.0", path = "../diesel_models", features = ["kv_
 euclid = { version = "0.1.0", path = "../euclid", features = ["valued_jit"] }
 events = { version = "0.1.0", path = "../events" }
 external_services = { version = "0.1.0", path = "../external_services" }
-hyperswitch_connectors = { version = "0.1.0", path = "../hyperswitch_connectors" }
+hyperswitch_connectors = { version = "0.1.0", path = "../hyperswitch_connectors" , default-features = false }
 hyperswitch_constraint_graph = { version = "0.1.0", path = "../hyperswitch_constraint_graph" }
 hyperswitch_domain_models = { version = "0.1.0", path = "../hyperswitch_domain_models", default-features = false }
-hyperswitch_interfaces = { version = "0.1.0", path = "../hyperswitch_interfaces" }
+hyperswitch_interfaces = { version = "0.1.0", path = "../hyperswitch_interfaces", default-features = false }
 kgraph_utils = { version = "0.1.0", path = "../kgraph_utils" }
 masking = { version = "0.1.0", path = "../masking" }
 pm_auth = { version = "0.1.0", path = "../pm_auth", package = "pm_auth" }
