--- a/crates/kgraph_utils/Cargo.toml
+++ b/crates/kgraph_utils/Cargo.toml
@@ -11,7 +11,7 @@ default = ["v1"]
 dummy_connector = ["api_models/dummy_connector", "euclid/dummy_connector"]
 v1 = []
 v2 = []
-merchant_connector_account_v2 = ["v2"]
+merchant_connector_account_v2 = []
 
 [dependencies]
 api_models = { version = "0.1.0", path = "../api_models", package = "api_models" }
