--- a/crates/api_models/Cargo.toml
+++ b/crates/api_models/Cargo.toml
@@ -21,6 +21,7 @@ v2 = []
 v1 = []
 merchant_account_v2 = []
 payment_v2 = []
+payment_methods_v2 = []
 
 [dependencies]
 actix-web = { version = "4.5.1", optional = true }
