feat(customer): customer v2 refactor for customer create end point (#5350)
Co-authored-by: Narayan Bhat <narayan.bhat@juspay.in>
Co-authored-by: hrithikesh026 <hrithikesh.vm@juspay.in>
Co-authored-by: Prajjwal Kumar <prajjwal.kumar@juspay.in>
Co-authored-by: Sanchith Hegde <sanchith.hegde@juspay.in>
Co-authored-by: hyperswitch-bot[bot] <148525504+hyperswitch-bot[bot]@users.noreply.github.com>

--- a/crates/api_models/Cargo.toml
+++ b/crates/api_models/Cargo.toml
@@ -19,6 +19,7 @@ openapi = ["common_enums/openapi", "olap", "recon", "dummy_connector", "olap"]
 recon = []
 v2 = []
 v1 = []
+customer_v2 = []
 merchant_account_v2 = []
 payment_v2 = []
 
