--- a/crates/hyperswitch_domain_models/Cargo.toml
+++ b/crates/hyperswitch_domain_models/Cargo.toml
@@ -15,6 +15,7 @@ payouts = ["api_models/payouts"]
 frm = ["api_models/frm"]
 v2 = ["api_models/v2", "diesel_models/v2"]
 v1 = ["api_models/v1", "diesel_models/v1"]
+customer_v2 = ["api_models/customer_v2", "diesel_models/customer_v2"]
 merchant_account_v2 = ["api_models/merchant_account_v2", "diesel_models/merchant_account_v2"]
 payment_v2 = ["api_models/payment_v2", "diesel_models/payment_v2"]
 
