--- a/config/development.toml
+++ b/config/development.toml
@@ -646,7 +646,7 @@ consolidated_events_topic = "hyperswitch-consolidated-events"
 authentication_analytics_topic = "hyperswitch-authentication-events"
 
 [analytics]
-source = "sqlx"
+source = "clickhouse"
 
 [analytics.clickhouse]
 username = "default"
