chore: fix ci errors

--- a/crates/router/Cargo.toml
+++ b/crates/router/Cargo.toml
@@ -16,7 +16,7 @@ keymanager_mtls = ["reqwest/rustls-tls", "common_utils/keymanager_mtls"]
 encryption_service = ["hyperswitch_domain_models/encryption_service", "common_utils/encryption_service"]
 email = ["external_services/email", "scheduler/email", "olap"]
 keymanager_create = []
-frm = ["api_models/frm", "hyperswitch_domain_models/frm", "hyperswitch_connectors/frm"]
+frm = ["api_models/frm", "hyperswitch_domain_models/frm", "hyperswitch_connectors/frm", "hyperswitch_interfaces/frm"]
 stripe = ["dep:serde_qs"]
 release = ["stripe", "email", "accounts_cache", "kv_store", "vergen", "recon", "external_services/aws_kms", "external_services/aws_s3", "keymanager_mtls", "keymanager_create", "encryption_service"]
 oltp = ["storage_impl/oltp"]
