--- a/config/development.toml
+++ b/config/development.toml
@@ -152,6 +152,7 @@ cards = [
     "trustpay",
     "tsys",
     "volt",
+    "wellsfargo",
     "wise",
     "worldline",
     "worldpay",
@@ -248,6 +249,7 @@ worldpay.base_url = "https://try.access.worldpay.com/"
 trustpay.base_url = "https://test-tpgw.trustpay.eu/"
 tsys.base_url = "https://stagegw.transnox.com/"
 volt.base_url = "https://api.sandbox.volt.io/"
+wellsfargo.base_url = "https://apitest.cybersource.com/"
 trustpay.base_url_bank_redirects = "https://aapi.trustpay.eu/"
 zen.base_url = "https://api.zen-test.com/"
 zen.secondary_base_url = "https://secure.zen-test.com/"
