--- a/crates/router/tests/connectors/sample_auth.toml
+++ b/crates/router/tests/connectors/sample_auth.toml
@@ -249,3 +249,8 @@ key2 = "Razorpay Secret"
 
 [itaubank]
 api_key="API Key"
+
+[wellsfargo]
+api_key = "MyApiKey"
+key1 = "Merchant id"
+api_secret = "Secret key"
