--- a/loadtest/config/development.toml
+++ b/loadtest/config/development.toml
@@ -145,6 +145,7 @@ trustpay.base_url = "https://test-tpgw.trustpay.eu/"
 trustpay.base_url_bank_redirects = "https://aapi.trustpay.eu/"
 tsys.base_url = "https://stagegw.transnox.com/"
 volt.base_url = "https://api.sandbox.volt.io/"
+wellsfargo.base_url = "https://apitest.cybersource.com/"
 worldline.base_url = "https://eu.sandbox.api-ingenico.com/"
 worldpay.base_url = "https://try.access.worldpay.com/"
 wise.base_url = "https://api.sandbox.transferwise.tech/"
@@ -216,6 +217,7 @@ cards = [
     "trustpay",
     "tsys",
     "volt",
+    "wellsfargo",
     "wise",
     "worldline",
     "worldpay",
