--- a/crates/hyperswitch_connectors/Cargo.toml
+++ b/crates/hyperswitch_connectors/Cargo.toml
@@ -7,7 +7,7 @@ license.workspace = true
 
 [features]
 frm = ["hyperswitch_domain_models/frm"]
-payouts = ["hyperswitch_domain_models/payouts", "api_models/payouts"]
+payouts = ["hyperswitch_domain_models/payouts", "api_models/payouts", "hyperswitch_interfaces/payouts"]
 
 [dependencies]
 async-trait = "0.1.79"
