--- a/crates/cards/Cargo.toml
+++ b/crates/cards/Cargo.toml
@@ -20,7 +20,7 @@ common_utils = { version = "0.1.0", path = "../common_utils" }
 masking = { version = "0.1.0", path = "../masking" }
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
-router_env = { version = "0.1.0", path = "../router_env", features = ["log_extra_implicit_fields", "log_custom_entries_to_extra"] }
+router_env = { version = "0.1.0", path = "../router_env", features = ["log_extra_implicit_fields", "log_custom_entries_to_extra"], default-features = false }
 
 [dev-dependencies]
 serde_json = "1.0.115"
