--- a/crates/common_utils/Cargo.toml
+++ b/crates/common_utils/Cargo.toml
@@ -8,13 +8,14 @@ readme = "README.md"
 license.workspace = true
 
 [features]
-keymanager = []
+default = ["dep:router_env"]
+keymanager = ["dep:router_env"]
 keymanager_mtls = ["reqwest/rustls-tls"]
-encryption_service = []
-signals = ["dep:signal-hook-tokio", "dep:signal-hook", "dep:tokio", "dep:futures"]
+encryption_service = ["dep:router_env"]
+signals = ["dep:signal-hook-tokio", "dep:signal-hook", "dep:tokio", "dep:router_env", "dep:futures"]
 async_ext = ["dep:async-trait", "dep:futures"]
-logs = []
-metrics = ["dep:futures"]
+logs = ["dep:router_env"]
+metrics = ["dep:router_env", "dep:futures"]
 payouts = ["common_enums/payouts"]
 
 [dependencies]
@@ -55,7 +56,7 @@ uuid = { version = "1.8.0", features = ["v7"] }
 # First party crates
 common_enums = { version = "0.1.0", path = "../common_enums" }
 masking = { version = "0.1.0", path = "../masking" }
-router_env = { version = "0.1.0", path = "../router_env", features = ["log_extra_implicit_fields", "log_custom_entries_to_extra"] }
+router_env = { version = "0.1.0", path = "../router_env", features = ["log_extra_implicit_fields", "log_custom_entries_to_extra"], optional = true }
 
 [target.'cfg(not(target_os = "windows"))'.dependencies]
 signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"], optional = true }
