--- a/crates/router/Cargo.toml
+++ b/crates/router/Cargo.toml
@@ -35,7 +35,7 @@ v1 = ["api_models/v1", "diesel_models/v1", "hyperswitch_domain_models/v1", "stor
 customer_v2 = ["api_models/customer_v2", "diesel_models/customer_v2", "hyperswitch_domain_models/customer_v2"]
 merchant_account_v2 = ["api_models/merchant_account_v2", "diesel_models/merchant_account_v2", "hyperswitch_domain_models/merchant_account_v2"]
 payment_v2 = ["api_models/payment_v2", "diesel_models/payment_v2", "hyperswitch_domain_models/payment_v2"]
-routing_v2 = ["api_models/routing_v2","diesel_models/routing_v2"]
+routing_v2 = ["api_models/routing_v2"]
 
 [dependencies]
 actix-cors = "0.6.5"
