--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -41,6 +41,7 @@ crates/router/tests/connectors/ @juspay/hyperswitch-connector
 crates/test_utils/tests/connectors/ @juspay/hyperswitch-connector
 crates/test_utils/tests/sample_auth.toml @juspay/hyperswitch-connector
 crates/connector_configs/ @juspay/hyperswitch-connector
+crates/hyperswitch_connectors/ @juspay/hyperswitch-connector
 
 crates/router/src/compatibility/ @juspay/hyperswitch-compatibility
 
