--- a/config/deployments/production.toml
+++ b/config/deployments/production.toml
@@ -57,8 +57,7 @@ gocardless.base_url = "https://api.gocardless.com"
 gpayments.base_url = "https://{{merchant_endpoint_prefix}}-test.api.as1.gpayments.net"
 helcim.base_url = "https://api.helcim.com/"
 iatapay.base_url = "https://iata-pay.iata.org/api/v1"
-itaubank.base_url = "https://secure.api.itau/itau-ep9-gtw-pix-recebimentos-ext-v2/v2"
-itaubank.secondary_base_url = "https://secure.api.itau/"
+itaubank.base_url = "https://secure.api.itau/"
 klarna.base_url = "https://api{{klarna_region}}.klarna.com/"
 mifinity.base_url = "https://secure.mifinity.com/"
 mollie.base_url = "https://api.mollie.com/v2/"
